Done changes from Steps 27 to 44

--- a/static/css/introHCI.css
+++ b/static/css/introHCI.css
@@ -1,5 +1,6 @@
 /* applies to anything of class "example-class-selector" */
 .example-class-selector {
+     margin-left: 20px;
 	margin-top: 2em;
 }
 
@@ -32,3 +33,5 @@ body {
      position: absolute;
      z-index: -1;
 }
+
+.project{}
